testsuite/tests/typecheck/should_fail/T11514.hs
{-# LANGUAGE RankNTypes #-}

module T11514 where

foo :: forall a. (Show a => a -> a) -> ()
foo = undefined
