testsuite/tests/typecheck/should_fail/T11514.stderr

T11514.hs:6:7: error:
    • Couldn't match expected type ‘(Show a => a -> a) -> ()’
                  with actual type ‘a0’
      Cannot instantiate unification variable ‘a0’
      with a type involving polytypes: (Show a => a -> a) -> ()
    • In the expression: undefined
      In an equation for ‘foo’: foo = undefined
    • Relevant bindings include
        foo :: (Show a => a -> a) -> () (bound at T11514.hs:6:1)
